--- a/BMI calculator.ipynb
+++ b/BMI calculator.ipynb
@@ -12,36 +12,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Know your BMI to know your health better\n",
-      "Aditya BMI Calculator service\n",
-      "Your BMI is 22.093170054286073, your weight is normal.\n",
-      "Thanyou for using our services , visit again.\n"
+      "\tKnow your BMI to know your health better\n",
+      "Name: Aditya\n",
+      "Height: 178.0 c.m.\n",
+      "Weight: 70.0 k.g.\n",
+      "BMI: 22.1\n",
+      "Aditya, your weight is normal.\n",
+      "\tThankyou for using our services , visit again.\n"
      ]
     }
    ],
    "source": [
-    "print(\"Know your BMI to know your health better\")\n",
-    "print(\"Aditya BMI Calculator service\")\n",
-    "input(\"Enter Your name : \")\n",
-    "height = float(input(\"Enter your height in c.m.: \"))/100  #to convert height into metres\n",
+    "print(\"\\tKnow your BMI to know your health better\")\n",
+    "name = input(\"Enter Your name : \")\n",
+    "height = float(input(\"Enter your height in c.m.: \"))\n",
     "weight = float(input(\"Enter your weight in kilograms: \"))\n",
-    "BMI = weight / (height **2)\n",
+    "height_m = height/100  #to convert height into metres\n",
+    "BMI = (weight / height_m **2).__round__(1)\n",
+    "\n",
+    "print (f\"Name: {name}\")\n",
+    "print (f\"Height: {height} c.m.\")\n",
+    "print (f\"Weight: {weight} k.g.\")\n",
+    "print (f\"BMI: {BMI}\")\n",
     "if BMI <18.5:\n",
-    "    print(f\"Your BMI is {BMI}, you are underweight.\")\n",
-    "if BMI >= 18.5 and BMI <25:\n",
-    "    print(f\"Your BMI is {BMI}, your weight is normal.\")\n",
+    "    print(f\"{name}, you are underweight.\")\n",
+    "elif BMI >= 18.5 and BMI <25:\n",
+    "    print(f\"{name}, your weight is normal.\")\n",
     "elif BMI >=25 and BMI <30:\n",
-    "    print(f\"Your BMI is {BMI}, you are overweight.\")\n",
+    "    print(f\"{name}, you are overweight.\")\n",
     "else:\n",
-    "    print(f\"Your BMI is {BMI}, you are obese.\")\n",
-    "print(\"Thanyou for using our services , visit again.\")"
+    "    print(f\"{name}, you are obese.\")\n",
+    "print(\"\\tThankyou for using our services , visit again.\")"
    ]
   },
   {
