--- a/BMI calculator.ipynb
+++ b/BMI calculator.ipynb
@@ -51,13 +51,6 @@
     "    print(f\"{name}, you are obese.\")\n",
     "print(\"\\tThankyou for using our services , visit again.\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -76,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
