--- a/BMI calculator.ipynb
+++ b/BMI calculator.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -22,8 +22,8 @@
       "\tKnow your BMI to know your health better\n",
       "Name: Aditya\n",
       "Height: 178.0 c.m.\n",
-      "Weight: 70.0 k.g.\n",
-      "BMI: 22.1\n",
+      "Weight: 69.0 k.g.\n",
+      "BMI: 21.8\n",
       "Aditya, your weight is normal.\n",
       "\tThankyou for using our services , visit again.\n"
      ]
@@ -69,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
