--- a/BMI calculator.ipynb
+++ b/BMI calculator.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "<div align = 'center' > <h1> BMI Calculator <h1>\n",
     "\n",
-    "</div> BMI (Body mass index) is quite useful when it comes to check a person health. Body weight is the very basic and primary criteria to check if the person is healthy or not and whether the person is maintaining an appropriate weight or not. We need height and weight only to calculate BMI using the formula : weight(in kg)/ height² (in metres)"
+    "</div> BMI (Body mass index) is quite useful when it comes to check a person health. Body weight is the very basic and primary criteria to check if the person is healthy or not and whether the person is maintaining an appropriate weight or not. We need height and weight only to calculate BMI using the formula : weight(in kg)/ height² (in metres)."
    ]
   },
   {
