--- a/temperature_converter.ipynb
+++ b/temperature_converter.ipynb
@@ -5,7 +5,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Celcius to "
+    "## Fahrenheit to celcius"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def far_to_cel (farhenheit):\n",
+    "    cel = (farhenheit-32) / 1.8\n",
+    "    return round(cel)"
    ]
   },
   {
@@ -17,10 +28,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.10.8"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "d4c82845a048daa8c33a8abb9ebd8563314c4f8de705e1fb128134a75ab22022"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
