--- a/temperature_converter.ipynb
+++ b/temperature_converter.ipynb
@@ -37,8 +37,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Celcius to Fahrenheit"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,6 +54,13 @@
     "    far = (celcius * 1.8 ) +32\n",
     "    return round(far)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
