--- a/temperature_converter.ipynb
+++ b/temperature_converter.ipynb
@@ -57,10 +57,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cel_to_far(26.67))"
+   ]
   }
  ],
  "metadata": {
