--- a/temperature_converter.ipynb
+++ b/temperature_converter.ipynb
@@ -10,18 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def far_to_cel (farhenheit):\n",
+    "    '''\n",
+    "    Converts Temperature given in Fahreneit to Celcius\n",
+    "    '''\n",
     "    cel = (farhenheit-32) / 1.8\n",
     "    return round(cel)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -46,18 +49,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cel_to_far (celcius):\n",
+    "    '''\n",
+    "    Converts Temperature given in Celcius to Fahrenheit\n",
+    "    '''\n",
     "    far = (celcius * 1.8 ) +32\n",
     "    return round(far)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
